--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta content="text/html" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>癸卯年十月初六，且喜且乐，且以永日</title>
+    <link rel="icon" href="assets/images/logo.png">
     <style type="text/css">
         h2 {
             color: #c63a44;
